; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/extr_aspeed-video.c_aspeed_video_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/extr_aspeed-video.c_aspeed_video_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aspeed_video = type { i32, i64 }

@.str = private unnamed_addr constant [17 x i8] c"read %03x[%08x]\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.aspeed_video*, i64)* @aspeed_video_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @aspeed_video_read(%struct.aspeed_video* %0, i64 %1) #0 {
  %3 = alloca %struct.aspeed_video*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.aspeed_video* %0, %struct.aspeed_video** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.aspeed_video*, %struct.aspeed_video** %3, align 8
  %7 = getelementptr inbounds %struct.aspeed_video, %struct.aspeed_video* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i64 @readl(i64 %10)
  store i64 %11, i64* %5, align 8
  %12 = load %struct.aspeed_video*, %struct.aspeed_video** %3, align 8
  %13 = getelementptr inbounds %struct.aspeed_video, %struct.aspeed_video* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @dev_dbg(i32 %14, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %15, i64 %16)
  %18 = load i64, i64* %5, align 8
  ret i64 %18
}

declare dso_local i64 @readl(i64) #1

declare dso_local i32 @dev_dbg(i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
